--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htm lang="en"l>
+<html lang="en">
     <head>
         <title>Chris Baucke's Journal</title>
         <meta author="Chris Baucke">
