Added styling for header, table of contents, bg

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>Chris Baucke's Journal</title>
         <meta charset="utf-8">
         <link rel="icon" href="favicon.ico">
+        <link rel="stylesheet" href="siteStyle.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <header>
