Added styling for second entry

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" href="siteStyle.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet"> 
+        <style>
+            body{  
+                background-color: seashell;
+            } 
+        </style>
     </head>
     <body>
         <header>
@@ -52,7 +57,7 @@
                     <h3>4/10/21 - <i>Relaxing Weekend</i></h3>
                     <p>Today I had to take a quiz, but for the most part had an uneventful day. <br>
                         Here is a picture I took of my dog enjoying the weekend:</p>
-                    <img src="Grace2.jpg" alt="" width=400>
+                    <img src="Grace2.jpg" alt="" style="width: 400px;">
                     <p>I also listened to a lot of music. Here is one of my favorite songs I've been listening to lately, called <i>Poster Boy</i> by Unlike Pluto: </p>
                     <audio controls src="UnlikePluto-PosterBoy.mp3"></audio>
                 </div>
