Added styling for third entry

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a id="4/9/21"></a>
                     <h3>4/9/21 - <i>Remebering Campus</i></h3>
                     <p>It's been a little over 1 year and 1 month since I was last on campus. Here is a video I took the last time I was in San Diego:</p>
-                    <video controls width=700 src="seagulls.mp4"></video>
+                    <video controls src="seagulls.mp4"></video>
                 </div>
             </section>
         </main>
